--- a/package.xml
+++ b/package.xml
@@ -14,6 +14,8 @@
 
   <depend>rclpy</depend>
   <depend>core</depend>
+  <depend>joint_state_publisher_gui</depend>
+  <depend>ros-ign-bridge</depend>
 
   <export>
     <build_type>ament_python</build_type>
